evaluation/g4_folder/cfg28.g4
grammar cfg28;
s : s1;
s1 : '&' | '[' | 'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'g' | 'h' | 'i' | 'j' | 'k' | 'l' | 'm' | 'n' | 'o' | 'p' | 'q' | 'r' | 's' | 't' | 'u' | 'v' | 'w' | 'x' | 'y' | 'z';

WS : [ \t\r\n]+ -> skip ;
